# earthdata-mcp

./: .gitignore  .pre-commit-config.yaml  BootstrapLambdaDockerfile  EmbeddingLambdaDockerfile  IngestLambdaDockerfile  McpServerDockerfile  README.md  base_tool.py  loader.py  pyproject.toml  schema_validator.py  server.py
.github/workflows/: python-app.yml
lambdas/bootstrap/: __init__.py  handler.py
lambdas/embedding/: __init__.py  handler.py  requirements.txt
lambdas/ingest/: __init__.py  handler.py
middleware/: __init__.py  cors.py
migrations/: 001_create_concept_embeddings.sql  002_create_concept_associations.sql  003_create_kms_embeddings.sql  004_create_concept_kms_associations.sql
schemas/collections_embeddings/: input.json  output.json  sample_input.json  sample_output.json
schemas/geospatial_embeddings/: input.json  output.json  sample_input.json
schemas/temporal_ranges/: input.json  input_model.py  output.json  sample_input.json  sample_output.json
terraform/: data.tf  main.tf  output.tf  variable.tf
terraform/application/: main.tf  outputs.tf  provider.tf  variables.tf
terraform/database/: main.tf  outputs.tf  provider.tf  variables.tf
terraform/modules/application/: alarms.tf  iam.tf  lambda.tf  mcp-server.tf  outputs.tf  sqs.tf  variables.tf
terraform/modules/caching/: main.tf  secrets_manager.tf  variables.tf
terraform/modules/database/: alarms.tf  main.tf  outputs.tf  secrets.tf  variables.tf
terraform/modules/ecr/: main.tf  output.tf  variables.tf
terraform/modules/langfuse/: README.md  alb.tf  clickhouse.tf  ecr.tf  ecs.tf  efs.tf  iam.tf  outputs.tf  postgres.tf  redis.tf  s3.tf  secrets_manager.tf  service_discovery.tf  variables.tf
terraform/observability/: main.tf  outputs.tf  variables.tf
terraform/scripts/: bamboo-bins.sh  build-langfuse-web-custom.sh  build-langfuse-worker.sh  docker-build.sh  generate-backend.sh
terraform/scripts/bamboo/: deploy-application.sh  deploy-database.sh  deploy-observability.sh  package-earthdata-mcp.sh  run-migrations.sh
tests/: conftest.py  test_collections_embeddings.py  test_geospatial_embeddings.py  test_loader.py  test_server.py  test_temporal_ranges.py
tests/lambdas/: __init__.py  conftest.py  test_bootstrap_handler.py  test_embedding_handler.py  test_ingest_handler.py
tests/mocks/cmr/: citation_example.json  collection_minimal.json  collection_modis_sst.json  variable_sea_surface_temp.json
tests/mocks/kms/: instrument_modis.json  platform_terra.json  sciencekeyword_precipitation.json  sciencekeyword_sst.json
tests/utils/: test_abstract_db.py  test_cache.py  test_cmr_utils.py  test_data_collection.py  test_embedding.py  test_embeddings.py  test_get_secret.py  test_kms.py  test_natual_language_geocoder.py  test_postgres_db.py  test_redis_client.py  test_request_utils.py
tools/collections_embeddings/: input_model.py  manifest.json  output.json  output_model.py  tool.py
tools/geospatial_embeddings/: input_model.py  manifest.json  output.json  output_model.py  tool.py
tools/temporal_ranges/: input_model.py  manifest.json  output.json  output_model.py  prompt.md  tool.py
util/: __init__.py  abstract_db.py  bedrock.py  cache.py  cmr.py  cmr_utils.py  data_collection.py  database.py  embedding.py  get_secret.py  kms.py  langfuse.py  models.py  natural_language_geocoder.py  postgres_db.py  redis_client.py  request_utils.py  secrets.py  sqs.py  ssm.py  supported-models.json
util/cmr/: __init__.py  client.py  extraction.py
util/datastores/: __init__.py  base.py  postgres.py
util/embeddings/: __init__.py  base.py  bedrock.py  kms.py
util/kms/: __init__.py  client.py
