[project]
name = "fastmcp-python"
version = "0.0.1"
description = "Basic FastMCP implementation for the common metadata repository using Python."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.12.4",
    "earthaccess>=0.14.0",
    "starlette>=0.48.0",
    "uvicorn>=0.37.0",
    "e84-geoai-common>=0.0.3",
    "natural-language-geocoding",
    "python-dotenv",
    "python-toon>=0.1.3",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
