[project]
name = "earthdata-mcp"
version = "0.0.1"
description = "Basic FastMCP implementation for the common metadata repository using Python."

readme = "README.md"

requires-python = "==3.13.0"
dependencies = [
    "fastmcp==2.12.4",
    "earthaccess==0.14.0",
    "starlette==0.48.0",
    "uvicorn==0.37.0",
    "e84-geoai-common==0.0.7",
    "natural-language-geocoding==0.1.2",
    "python-dotenv==1.2.1",
    "python-toon==0.1.3",
    "pytest==9.0.1",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pylint==3.0.0",
    "redis==7.1.0",
    "langfuse==3.10.6",
    "instructor>=1.13.0",
    "jsonschema>=4.17.3",
]


[tool.pylint.messages_control]
disable = [
    "redefined-outer-name",
    "broad-exception-caught",
    "too-few-public-methods"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html", 
    "--cov-report=xml",
    "-v"
]


[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/site-packages/*"
]